<resources>
    <string name="app_name">FoodScanner</string>
    <string name="scan">SCAN</string>
    <string name="list">LIST</string>
    <string name="submit">SUBMIT</string>
    <string name="name">NAME</string>
    <string name="price">PRICE</string>
    <string name="download_file">DOWNLOAD FILE</string>
    <string name="download">DOWNLOAD</string>
    <string name="product_name_is_empty">Product name is empty</string>
    <string name="product_price_is_empty">Product price is empty</string>
    <string name="qr_image_downloaded">QR Image downloaded</string>
    <string name="scanning">SCANNING</string>
    <string name="qr_is_not_product">QR is not product</string>
    <string name="done">Done</string>


</resources>
