<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <data>

        <variable
            name="viewModel"
            type="com.useruser.foodscanner.viewmodel.CreateQrViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_main_bg"
        tools:context=".view.CreateQrCodeActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{viewModel::backArrowClick}"
            android:background="@drawable/ic_back_arrow_black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::openListClick}"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arial_black"
            android:text="@string/list"
            android:textSize="16sp"
            android:textColor="@color/color_btn_scanning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.useruser.foodscanner.view.customview.CustomEditText
            android:id="@+id/customEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/name"
            app:text="@={viewModel.productName}"
            app:textFont="@font/arial_black"
            app:inputType="text"
            app:maxLength="25"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.useruser.foodscanner.view.customview.CustomEditText
            android:id="@+id/customEditText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:textFont="@font/arial_black"
            app:title="@string/price"
            app:text="@={viewModel.productPrice}"
            app:inputType="number"
            app:maxLength="16"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customEditText" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            android:fitsSystemWindows="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customEditText2">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:image="@{viewModel.qrImage}"
                tools:src="@drawable/image_qr" />

        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:visible="@{viewModel.saveButtonVisible}"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/color_add_qr_btn"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{viewModel::createQrClick}"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="19dp"
                android:fontFamily="@font/arial_black"
                android:text="@string/submit"
                android:textSize="16sp"
                android:textColor="@color/color_btn_scanning" />


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:visible="@{viewModel.downloadButtonVisible}"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.cardview.widget.CardView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{viewModel::downloadImage}"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_download" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/arial_black"
                        android:text="@string/download"
                        android:textSize="16sp"
                        android:textColor="@color/color_btn_scanning"/>


                </LinearLayout>



            </androidx.cardview.widget.CardView>



            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_add_bg"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{viewModel::addClick}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    android:layout_gravity="center"/>
            </FrameLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>